# itmo-multithread

./: .gitignore  README.md
lab1/: CMakeLists.txt  README.md  cpu_characteristics.md  generate.py  main.cpp  matrix.hpp  matrix_multiplication.h  plotting.py  run.py  util.h  util.hpp
lab1/cpp/: command_line.h  main.cpp  matrix.h  matrix_multiplication.h  util.h
lab1/md/: run.md
lab2-Jacobi/: CMakeLists.txt  README.md  plotting.py  run.py
lab2-Jacobi/cpp/: LinearSystem.h  jacobi.h  main.cpp  util.h
lab2-Jacobi/matrices/: example.txt
lab2-Jacobi/md/: mpi_installation_guide.md  mpi_run_guide.md
lab3/: CMakeLists.txt  README.md  plotting.py  run.py
lab3/cpp/: main.cpp  sorting.h  util.h
lab3/md/: mpi_run_guide.md
lab3/vectors/: example.txt
lab4-Dijkstra/: CMakeLists.txt  README.md  plotting.py  run.py
lab4-Dijkstra/cpp/: dijkstra.h  main.cpp  my_defs.h  util.h
lab4-Dijkstra/matrices/: result.txt.example
lab4-Dijkstra/md/: run_guide.md
lab5-spark/: README.md  pom.xml
lab5-spark/docker/: docker-compose.yml  hadoop.env  spark-defaults.conf
lab5-spark/results/task_2/: requests_with_error
lab5-spark/results/task_3/: method_code_day_aggregation
lab5-spark/results/task_4/: week_aggregation
lab5-spark/src/main/java/com/dxahtepb/spark/logfilter/: Main.java
lab5-spark/src/main/java/com/dxahtepb/spark/logfilter/job/: ErrorFilterJob.java  ErrorWindowedAggregationJob.java  JobUtils.java  LogEntry.java  MethodCodeAggregationJob.java  SparkJob.java
